--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -9,15 +9,15 @@
 <body>
 <h1>Our Menu</h1>
 <div class="col-lg-3 col-md-2 col-sm-1">
-    <p id="p1">title 1</p>
+    <p id="p1" class="title">title 1</p>
     <p>section 1</p>
 </div>
 <div class="col-lg-3 col-md-2 col-sm-1">
-    <p id="p2">title 2</p>
+    <p id="p2" class="title">title 2</p>
     <p>section 2</p>
 </div>
 <div class="col-lg-3 col-md-1 col-sm-1">
-    <p id="p3">title 3</p>
+    <p id="p3" class="title">title 3</p>
     <p>section 3</p>
 </div>
 </body>
