--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -9,16 +9,22 @@
 <body>
 <h1>Our Menu</h1>
 <div class="col-lg-3 col-md-2 col-sm-1">
-    <p id="p1" class="title">title 1</p>
-    <p>section 1</p>
+    <div class="container">
+        <p id="p1" class="title">title 1</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</p>
+    </div>
 </div>
 <div class="col-lg-3 col-md-2 col-sm-1">
-    <p id="p2" class="title">title 2</p>
-    <p>section 2</p>
+    <div class="container">
+        <p id="p2" class="title">title 2</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</p>
+    </div>
 </div>
 <div class="col-lg-3 col-md-1 col-sm-1">
-    <p id="p3" class="title">title 3</p>
-    <p>section 3</p>
+    <div class="container">
+        <p id="p3" class="title">title 3</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</p>
+    </div>
 </div>
 </body>
 </html>
